Bug 400422 - Pixelated icons with fractional display scaling
Summary: Pixelated icons with fractional display scaling
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.15
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL: https://bugreports.qt.io/browse/QTBUG...
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-28 15:28 UTC by Patrick Silva
Modified: 2019-04-29 18:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (76.05 KB, image/png)
2018-10-28 15:28 UTC, Patrick Silva
Details
kaffeine 2.0.16 on Arch Linux (74.71 KB, image/png)
2019-01-15 13:05 UTC, Patrick Silva
Details
Screenshot with Qt scale equal to 3 (157.23 KB, image/png)
2019-01-15 14:35 UTC, Mauro Carvalho Chehab
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-10-28 15:28:14 UTC
Created attachment 115948 [details]
screenshot

My display scaling factor is 1.2 on X11, I use kaffeine 2.0.15 on Arch Linux.

STEPS TO REPRODUCE
1. set fractional display scaling in system settings > display and monitor > scale display
2. restart plasma session
3. open kaffeine

OBSERVED RESULT
icons are pixelated. See the screenshot please.

EXPECTED RESULT
crisp icons

SOFTWARE VERSIONS
Arch Linux
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51
Qt Version: 5.12 beta3
Comment 1 Mauro Carvalho Chehab 2018-11-05 09:55:04 UTC
Rendering icons is done via libQt.

On Kaffeine, all icons defined internally are at SVG format, so they should scale fine. There are a number of icons, however, that comes from the theme used on KDE. That is the case, for example, of the Play Audio CD icon:

src/mainwindow.cpp:     button = addShortcut(i18n("&2 Play Audio CD"), QIcon::fromTheme(QLatin1String("media-optical-audio"), QIcon(":media-optical-audio")), this);

On a quick look here, while on several themes this is a SVG file too, on some it is still a png image (here, I'm seeing it on Mint-X, matefaenza, matefaenzadark and oxygen themes). I prefer myself to use the breeze theme, with uses SVG images.

If you're using a fractional display scaling, and assuming that libQt does the right thing, it probably makes sense to select a theme that uses
Comment 2 Mauro Carvalho Chehab 2018-11-05 09:57:45 UTC
(In reply to Mauro Carvalho Chehab from comment #1)
> Rendering icons is done via libQt.
> 
> On Kaffeine, all icons defined internally are at SVG format, so they should
> scale fine. There are a number of icons, however, that comes from the theme
> used on KDE. That is the case, for example, of the Play Audio CD icon:
> 
> src/mainwindow.cpp:     button = addShortcut(i18n("&2 Play Audio CD"),
> QIcon::fromTheme(QLatin1String("media-optical-audio"),
> QIcon(":media-optical-audio")), this);
> 
> On a quick look here, while on several themes this is a SVG file too, on
> some it is still a png image (here, I'm seeing it on Mint-X, matefaenza,
> matefaenzadark and oxygen themes). I prefer myself to use the breeze theme,
> with uses SVG images.
> 
> If you're using a fractional display scaling, and assuming that libQt does
> the right thing, it probably makes sense to select a theme that uses

(hit enter too soon)

If you're using a fractional display scaling, and assuming that libQt does
the right thing, it probably makes sense to select a theme that use SVG files for icons, as this will allow libQt to let the GPU accel to renderize it and avoid pixelizing them.
Comment 3 Patrick Silva 2018-11-05 12:30:22 UTC
I tested the following icon themes, all installed from KDE Store:

papirus
zafiro
newaita
oranchelo
flat-remix

Kaffeine has pixelated icons with all of them.
Comment 4 Patrick Silva 2018-11-05 12:36:02 UTC
I forgot to say that my screenshot shows Kaffeine with breeze icon theme.
Comment 5 Christoph Feck 2018-11-05 12:38:22 UTC
Probably just needs QApplication::setAttribute(Qt::AA_UseHighDpiPixmaps, true).
Comment 6 Mauro Carvalho Chehab 2018-11-07 09:08:39 UTC
Git commit d2e375691941a54a254f0c08e95c377eb0a5e74a by Mauro Carvalho Chehab.
Committed on 07/11/2018 at 09:06.
Pushed by mauroc into branch 'master'.

main: add support for High DPI pixel maps

Icons are shown pixalized when fractional display scaling is
used. Add support for high DPI pixel maps.

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>

M  +1    -0    src/main.cpp

https://commits.kde.org/kaffeine/d2e375691941a54a254f0c08e95c377eb0a5e74a
Comment 7 Mauro Carvalho Chehab 2018-11-07 09:10:28 UTC
(In reply to Christoph Feck from comment #5)
> Probably just needs QApplication::setAttribute(Qt::AA_UseHighDpiPixmaps,
> true).

Just added a patch setting it. Could you please check if this fixed the issue?

ATM, I don't have any high DPI screen to test it.
Comment 8 Christoph Feck 2018-11-07 10:53:49 UTC
You can test it with an environment variable:

QT_SCALE_FACTOR=1.5 kaffeine
Comment 9 Mauro Carvalho Chehab 2018-11-07 13:19:05 UTC
(In reply to Christoph Feck from comment #8)
> You can test it with an environment variable:
> 
> QT_SCALE_FACTOR=1.5 kaffeine

Thanks, that worked.

Yeah, I can see clear a improvement after applying the patch.

I'll close this bug.
Comment 10 Patrick Silva 2019-01-15 13:05:51 UTC
Created attachment 117467 [details]
kaffeine 2.0.16 on Arch Linux

Bug persists in kaffeine 2.0.16.
Comment 11 Mauro Carvalho Chehab 2019-01-15 14:35:52 UTC
Created attachment 117472 [details]
Screenshot with Qt scale equal to 3

(In reply to Patrick Silva from comment #10)
> Created attachment 117467 [details]
> kaffeine 2.0.16 on Arch Linux
> 
> Bug persists in kaffeine 2.0.16.

Are you sure it is not getting low resolution bitmaps due to some problem at the icon theme you're using?

Kaffeine 2.0.16 now has the proposed fix:

   src/main.cpp:   app.setAttribute(Qt::AA_UseHighDpiPixmaps, true);

On my local tests here with 2.0.16, several icons aren't pixelized with the theme I'm currently using.

You can double-check what icon files it is getting with:

   $ strace -e openat kaffeine 2>tmp
   $ grep icon tmp|grep -v .theme |grep -v ENOENT|grep -E "\.(png|svg|gif|jpg)"

On my tests here, using Adawita theme with has several.svg scalable icons and using:

   $ LANG=C QT_SCALE_FACTOR=3 strace -e openat kaffeine 2>tmp

It is getting:
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/48x48/apps/kaffeine.png", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/64x64/apps/kaffeine.png", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 25
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/48x48/actions/edit-clear.png", O_RDONLY|O_CLOEXEC) = 31
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 34
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 34
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 34
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 34
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 34
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 34
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/48x48/places/start-here.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/48x48/actions/media-skip-backward.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/48x48/actions/media-playback-start.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/48x48/actions/media-playback-stop.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/48x48/actions/media-skip-forward.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/256x256/status/audio-volume-medium.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/actions/player-time.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/actions/player-time.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/actions/player-time.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/256x256/mimetypes/video-x-generic.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/share/icons/Adwaita/256x256/devices/media-optical.png", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/devices/video-television.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/devices/video-television.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/devices/video-television.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 35
	openat(AT_FDCWD, "/usr/local/share/icons/hicolor/scalable/apps/kaffeine.svg", O_RDONLY|O_CLOEXEC) = 35

As you can see from the screenshot, scalable icons aren't pixelized. Of course the ones that come from a low-res PNG file (like the play icon that was loaded from /usr/share/icons/Adwaita/48x48/actions/media-playback-start.png) are pixalized, but this is a problem with the theme I chose and not with Kaffeine/Qt5.
Comment 12 Mauro Carvalho Chehab 2019-01-15 14:45:49 UTC
Btw, I'm testing different icon themes with:

$ export QT_QPA_PLATFORMTHEME="qt5ct" 
$ qt5ct

and calling Kaffeine from the same shell that has QT_QPA_PLATFORMTHEME="qt5ct". That allows me to change the theme via GUI just for Kaffeine without affecting the global theme setting.
Comment 13 Mauro Carvalho Chehab 2019-01-15 15:13:19 UTC
Btw, there's an open Qt5 bugzilla related to it:

    https://bugreports.qt.io/browse/QTBUG-52444

From the bug description and comments, it seems that Qt currently doesn't scale well SVG icons when using a fractional scale factor between 1 and 2.

This has to be solved at Qt5 library, as I can't see any way to solve it inside Kaffeine (and this is a known Qt5 bug).
Comment 14 Patrick Silva 2019-01-15 15:58:01 UTC
I use breeze icon theme, my display scaling factor is 1.2.
Comment 15 Patrick Silva 2019-04-29 18:41:18 UTC
I can't reproduce this bug with kaffeine 2.0.16 anymore.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.3