main: add support for High DPI pixel maps

Icons are shown pixalized when fractional display scaling is
used. Add support for high DPI pixel maps.

BUG: 400422

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>