src/main.cpp
@@ -209,6 +209,7 @@ int main(int argc, char *argv[])
 	app.setApplicationName("kaffeine");
 	app.setOrganizationDomain("kde.org");
 	app.setWindowIcon(QIcon::fromTheme(QLatin1String("kaffeine"), QIcon(":kaffeine")));
+	app.setAttribute(Qt::AA_UseHighDpiPixmaps, true);
 
 	app.parser.addVersionOption();
 	app.parser.addHelpOption();
